--- a/diagnostics/opensearch/filebeat/conf/filebeat.yml
+++ b/diagnostics/opensearch/filebeat/conf/filebeat.yml
@@ -26,18 +26,18 @@ processors:
 - drop_fields:
     fields: docker.container.labels
     ignore_missing: true
-setup.template.name: "filebeat-7.11.2"
-setup.template.pattern: "filebeat-7.11.2-*"    
+setup.template.name: "filebeat-%{[agent.version]}"
+setup.template.pattern: "filebeat-%{[agent.version]}-*"    
 output.elasticsearch:
   hosts: '${ELASTIC_HOST}'
   indices:
     - index: "%{[datastream]}"
       when.not.equals:
         datastream: "unknown"
-    - index: "filebeat-7.11.2-%{[tenant.name]}-%{[docker.attrs.ROLE_NAME]}-%{+yyyy.MM.dd}"
+    - index: "filebeat-%{[agent.version]}-new-%{[tenant.name]}-%{[docker.attrs.ROLE_NAME]}-%{+yyyy.MM.dd}"
       when.equals:
         serviceLevelIndex: "yes"
-    - index: "filebeat-7.11.2-%{[tenant.name]}-%{+yyyy.MM.dd}"
+    - index: "filebeat-%{[agent.version]}-new-%{+yyyy.MM.dd}"
       when.equals:
         tenantLevelIndex: "yes"
   bulk_max_size: '${BULK_MAX_SIZE:50}'
