--- a/diagnostics/opensearch/logstash/Dockerfile
+++ b/diagnostics/opensearch/logstash/Dockerfile
@@ -5,4 +5,4 @@ FROM docker.elastic.co/logstash/logstash:8.16.1
 RUN bin/logstash-plugin install logstash-output-opensearch && \
     bin/logstash-plugin install logstash-input-azure_event_hubs
 
-COPY logstash.conf /usr/share/logstash/pipeline/logstash.conf
+COPY ./diagnostics/opensearch/logstash/logstash.conf /usr/share/logstash/pipeline/logstash.conf
