--- a/diagnostics/opensearch/logstash/logstash.conf
+++ b/diagnostics/opensearch/logstash/logstash.conf
@@ -5,18 +5,32 @@ input {
 }
 
 filter {
-    json {
-        source => "message"
-        remove_field => ["message"]
-    }
-    split {
-        field => "records"
-    }
+  json {
+    source => "message"
+    remove_field => ["message"]
+  }
+
+  split {
+    field => "[records]"
+  }
+
+  date {
+    match => ["[records][time]", "MM/dd/yyyy HH:mm:ss"]
+    target => "@timestamp"
+  }
+
+  mutate {
+    remove_field => ["[records][time]"]
+  }
+
+  mutate {
+    remove_field => ["event.original"]
+  }
 }
 
 output {
-    opensearch {
-        hosts =>  ["${OPENSEARCH_HOST}:9200"]
-        index => "logstash-eventhub-%{+YYYY.MM.dd}"
-    }
+  opensearch {
+    hosts => ["${OPENSEARCH_HOST}:9200"]
+    index => "logstash-eventhub-%{+YYYY.MM.dd}"
+  }
 }
