--- a/diagnostics/opensearch/logstash/logstash.conf
+++ b/diagnostics/opensearch/logstash/logstash.conf
@@ -26,16 +26,24 @@ filter {
   mutate {
     remove_field => ["[event][original]"]
   }
-  
+
+  mutate {
+    gsub => [
+      "records[properties]", "'", "\"",
+      "records[properties]", "None", "null"
+    ]
+  }
+
   json {
-    source => ["[records][properties]"]
-    remove_field => ["[records][properties]"]
+    source => "records[properties]"
+    target => "properties"
+    remove_field => ["records[properties]"]
   }
 }
 
 output {
   opensearch {
     hosts => ["${OPENSEARCH_HOST}:9200"]
-    index => "logstash-eventhub-%{+YYYY.MM.dd}"
+    index => "${OPENSEARCH_INDEX}-%{+YYYY.MM.dd}"
   }
 }
