--- a/diagnostics/opensearch/logstash/logstash.conf
+++ b/diagnostics/opensearch/logstash/logstash.conf
@@ -29,15 +29,14 @@ filter {
 
   mutate {
     gsub => [
-      "records[properties]", "'", "\"",
-      "records[properties]", "None", "null"
+      "[records][properties]", "'", "\"",
+      "[records][properties]", "None", "null"
     ]
   }
 
   json {
-    source => "records[properties]"
-    target => "properties"
-    remove_field => ["records[properties]"]
+    source => "[records][properties]"
+    remove_field => ["[records][properties]"]
   }
 }
 
