--- a/diagnostics/opensearch/logstash/logstash.conf
+++ b/diagnostics/opensearch/logstash/logstash.conf
@@ -29,7 +29,7 @@ filter {
 
   mutate {
     gsub => [
-      "[records][properties]", "'", "\"",
+      "[records][properties]", "'", """,
       "[records][properties]", "None", "null"
     ]
   }
