added extarct properties

--- a/diagnostics/opensearch/logstash/logstash.conf
+++ b/diagnostics/opensearch/logstash/logstash.conf
@@ -27,6 +27,17 @@ filter {
     remove_field => ["[event][original]"]
   }
 
+  mutate {
+    gsub => [
+      "[records][properties]", "'", "\\"",
+      "[records][properties]", "None", "null"
+    ]
+  }
+
+  json {
+    source => "[records][properties]"
+    remove_field => ["[records][properties]"]
+  }
 }
 
 output {
