--- a/diagnostics/opensearch/logstash/logstash.conf
+++ b/diagnostics/opensearch/logstash/logstash.conf
@@ -28,11 +28,11 @@ filter {
   }
 
   mutate {
-    gsub => [
-      "[records][properties]", "'", "\"",
-      "[records][properties]", "\\\\", "\\",
-      "[records][properties]", "None", "null"
-    ]
+    gsub => [ "[records][properties]", '\'', '"' ]
+  }
+
+  mutate {
+    gsub => [ "[records][properties]", "None", "null" ]
   }
 
   json {
