Logstash filter changes

--- a/diagnostics/opensearch/logstash/logstash.conf
+++ b/diagnostics/opensearch/logstash/logstash.conf
@@ -31,13 +31,21 @@ filter {
     gsub => [ "[records][properties]", '\'', '"' ]
   }
 
-  mutate {
-    gsub => [ "[records][properties]", "None", "null" ]
-  }
+  if [records][properties] {
+    mutate {
+      gsub => [ "[records][properties]", '\'', '"' ]
+    }
 
-  json {
-    source => "[records][properties]"
-    remove_field => ["[records][properties]"]
+    mutate {
+      gsub => [ "[records][properties]", "None", "null" ]
+    }
+
+    if [records][properties] =~ "^\{.*\}$" {
+      json {
+        source => "[records][properties]"
+        remove_field => ["[records][properties]"]
+      }
+    }
   }
 }
 
