--- a/.github/workflows/logstash-docker-image.yml
+++ b/.github/workflows/logstash-docker-image.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "azure-event-hub" ]
   pull_request:
     branches: [ "azure-event-hub" ]
+  workflow_dispatch:
 
 defaults:
   run:
